@@ -1,5 +1,6 @@
 package com.team581.util;
 
+import com.google.common.collect.ImmutableList;
 import com.team581.autos.Point;
 import edu.wpi.first.math.geometry.Pose2d;
 import edu.wpi.first.math.geometry.Rectangle2d;
@@ -9,7 +10,7 @@ import edu.wpi.first.math.util.Units;
 import java.util.List;
 
 public class FieldUtil {
-  private static final double EXTRA_NEUTRAL_ZONE_THRESHOLD = 0.5;
+  public static final double EXTRA_NEUTRAL_ZONE_THRESHOLD = 0.5;
   // In meters
   public static final double FIELD_LENGTH = 16.540988;
   public static final double FIELD_WIDTH = 8.069326;
@@ -19,42 +20,43 @@ public class FieldUtil {
   public static final Point FEED_2_POSE = Point.ofRed(new Pose2d(15.75, 7.25, Rotation2d.kZero));
 
   // calculations
-  private static final double redRobotStartingLineX = Units.inchesToMeters(156.61);
-  private static final double blueRobotStartingLineX = FIELD_LENGTH - redRobotStartingLineX;
+  public static final double RED_ROBOT_STARTING_LINE_X = Units.inchesToMeters(156.61);
+  public static final double BLUE_ROBOT_STARTING_LINE_X = FIELD_LENGTH - RED_ROBOT_STARTING_LINE_X;
 
-  private static final double redTrenchX = Units.inchesToMeters(182.11);
-  private static final double blueTrenchX = FIELD_LENGTH - redTrenchX;
+  public static final double RED_TRENCH_X = Units.inchesToMeters(182.11);
+  public static final double BLUE_TRENCH_X = FIELD_LENGTH - RED_TRENCH_X;
 
-  private static final double trenchToRobotStartingLineDistanceX =
-      redTrenchX - redRobotStartingLineX;
+  public static final double TRENCH_TO_ROBOT_STARTING_LINE_DISTANCE_X =
+      RED_TRENCH_X - RED_ROBOT_STARTING_LINE_X;
 
-  private static final double redBoxCoordinateX =
-      trenchToRobotStartingLineDistanceX + redRobotStartingLineX;
-  private static final double blueBoxCoordinateX = blueTrenchX - trenchToRobotStartingLineDistanceX;
+  public static final double RED_BOX_COORDINATE_X =
+      TRENCH_TO_ROBOT_STARTING_LINE_DISTANCE_X + RED_ROBOT_STARTING_LINE_X;
+  public static final double BLUE_BOX_COORDINATE_X =
+      BLUE_TRENCH_X - TRENCH_TO_ROBOT_STARTING_LINE_DISTANCE_X;
 
-  private static final double trenchLengthY = Units.inchesToMeters(25.62 * 2);
-  private static final double oppositeTrenchCoordinateY = FIELD_WIDTH - trenchLengthY;
+  public static final double TRENCH_LENGTH_Y = Units.inchesToMeters(25.62 * 2);
+  public static final double OPPOSITE_TRENCH_COORDINATE_Y = FIELD_WIDTH - TRENCH_LENGTH_Y;
   // end of calculations
   public static final Rectangle2d RED_LEFT_UNSAFE_TRENCH_BOX =
       new Rectangle2d(
-          new Translation2d(redRobotStartingLineX, FIELD_WIDTH),
-          new Translation2d(redBoxCoordinateX, oppositeTrenchCoordinateY));
+          new Translation2d(RED_ROBOT_STARTING_LINE_X, FIELD_WIDTH),
+          new Translation2d(RED_BOX_COORDINATE_X, OPPOSITE_TRENCH_COORDINATE_Y));
   public static final Rectangle2d RED_RIGHT_UNSAFE_TRENCH_BOX =
       new Rectangle2d(
-          new Translation2d(redRobotStartingLineX, trenchLengthY),
-          new Translation2d(redBoxCoordinateX, 0.0));
+          new Translation2d(RED_ROBOT_STARTING_LINE_X, TRENCH_LENGTH_Y),
+          new Translation2d(RED_BOX_COORDINATE_X, 0.0));
 
   public static final Rectangle2d BLUE_LEFT_UNSAFE_TRENCH_BOX =
       new Rectangle2d(
-          new Translation2d(blueBoxCoordinateX, FIELD_WIDTH),
-          new Translation2d(blueRobotStartingLineX, oppositeTrenchCoordinateY));
+          new Translation2d(BLUE_BOX_COORDINATE_X, FIELD_WIDTH),
+          new Translation2d(BLUE_ROBOT_STARTING_LINE_X, OPPOSITE_TRENCH_COORDINATE_Y));
   public static final Rectangle2d BLUE_RIGHT_UNSAFE_TRENCH_BOX =
       new Rectangle2d(
-          new Translation2d(blueBoxCoordinateX, trenchLengthY),
-          new Translation2d(blueRobotStartingLineX, 0.0));
+          new Translation2d(BLUE_BOX_COORDINATE_X, TRENCH_LENGTH_Y),
+          new Translation2d(BLUE_ROBOT_STARTING_LINE_X, 0.0));
 
   public static final List<Rectangle2d> TRENCH_BOXES =
-      List.of(
+      ImmutableList.of(
           FieldUtil.BLUE_LEFT_UNSAFE_TRENCH_BOX,
           FieldUtil.BLUE_RIGHT_UNSAFE_TRENCH_BOX,
           FieldUtil.RED_LEFT_UNSAFE_TRENCH_BOX,
